midt på sidste modul

--- a/Style.CSS
+++ b/Style.CSS
@@ -22,6 +22,7 @@ background: lightgrey;
 .picture {
   text-align:center;
 color: black;
+
 }
 
 
@@ -44,6 +45,7 @@ body {
 }
 .divall {
   text-align: center;
+  
 
 
 }
@@ -51,4 +53,12 @@ body {
   display:inline-block;
   width: 28%;
 background:lightgrey;
+}
+h3 {
+  color: Black;
+}
+.brødtekst {
+  width: 90%;
+
+
 }
